Fixed info, using gap and rows inside rows

--- a/front-end/src/Componentes/info/info.css
+++ b/front-end/src/Componentes/info/info.css
@@ -1,6 +1,6 @@
 #info{
-    color: black;
-    background-color: #f3f3f3;
+    color: white;
+    border-color: white;
     opacity: 90%;
 }
 
